# overtaking_maneuver

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  installation.md  package.xml
cfg/: OvertakingManeuverInputs.cfg  OvertakingManeuverInputs.cfg~  overtaking_maneuver_inputs.cfg~
include/overtaking_maneuver/: overtaking_maneuver.h
launch/: button_simulator.launch  overtaking_maneuver.launch  overtaking_szenario.launch  smartfm_ppc.launch
maps/: overtaking_szenario.yaml  overtaking_szenario_2.yaml  peachtree_city_georgia.world
rviz/: overtaking.rviz  overtaking_catvehicle.rviz  overtaking_iMiev.rviz
src/: button_simulator.cpp  helper_node_repub_steering_cmd.cpp  overtaking_maneuver.cpp  overtaking_maneuver_node.cpp  overtaking_state_machine.cpp
srv/: PublishOvertakingTrajectory.srv
worlds/: overtaking_szenario.world
