<?xml version="1.0"?>

<package>

  <name>overtaking_maneuver</name>
  <version>0.0.0</version>
  <description>The overtaking_maneuver package</description>
  <maintainer email="fnaser@mit.edu">ahyou</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
